--- a/src/main/resources/templates/form/editForm.html
+++ b/src/main/resources/templates/form/editForm.html
@@ -18,25 +18,60 @@
         <h2>상품 수정 폼</h2>
     </div>
 
-    <form action="item.html" th:action method="post">
+    <form action="item.html" th:action th:object="${item}" method="post">
         <div>
             <label for="id">상품 ID</label>
-            <input type="text" id="id" name="id" class="form-control" value="1" th:value="${item.id}" readonly>
+            <input type="text" id="id" th:field="*{id}"  class="form-control" value="1" readonly>
         </div>
         <div>
             <label for="itemName">상품명</label>
-            <input type="text" id="itemName" name="itemName" class="form-control" value="상품A" th:value="${item.itemName}">
+            <input type="text" id="itemName" th:field="*{itemName}" class="form-control" value="상품A">
         </div>
         <div>
             <label for="price">가격</label>
-            <input type="text" id="price" name="price" class="form-control" value="10000" th:value="${item.price}">
+            <input type="text" id="price" th:field="*{price}" class="form-control" value="10000">
         </div>
         <div>
             <label for="quantity">수량</label>
-            <input type="text" id="quantity" name="quantity" class="form-control" value="10" th:value="${item.quantity}">
+            <input type="text" id="quantity" th:field="*{quantity}" class="form-control" value="10">
         </div>
 
         <hr class="my-4">
+
+        <div>판매 여부</div>
+        <div>
+            <div class="form-check">
+                <input type="checkbox" id="open" th:field="*{open}" class="form-check-input">
+                <label for="open" class="form-check-label">판매 오픈</label>
+            </div>
+        </div>
+
+        <div>
+            <div>등록 지역</div>
+            <div th:each="region : ${regions}" class="form-check form-check-inline">
+                <input type="checkbox" th:field="*{regions}" th:value="${region.key}" class="form-check-input">
+                <label th:for="${#ids.prev('regions')}"
+                       th:text="${region.value}" class="form-check-label">서울</label>
+            </div>
+        </div>
+
+        <div>
+            <div>상품 종류</div>
+            <div th:each="type : ${itemTypes}" class="form-check form-check-inline">
+                <input type="radio" th:field="*{itemType}" th:value="${type.name()}" class="form-check-input">
+                <label th:for="${#ids.prev('itemType')}"
+                       th:text="${type.description}" class="form-check-label"></label>
+            </div>
+        </div>
+
+        <div>
+            <div>배달 방식</div>
+            <select th:field="*{deliveryCode}" class="form-select">
+                <option value="">==배달 방식 선택==</option>
+                <option th:each="deliveryCode : ${deliveryCodes}" th:value="${deliveryCode.code}"
+                        th:text="${deliveryCode.displayName}"></option>
+            </select>
+        </div>
 
         <div class="row">
             <div class="col">
